<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/test"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/cardview_dark_background"
    tools:context=".layouts.GithubUserDesc">

    <ImageView
        android:id="@+id/itemPhoto"
        android:layout_width="150dp"
        android:layout_height="220dp"
        android:contentDescription="@string/githubUser_photo"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/itemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:layout_toEndOf="@id/itemPhoto"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/itemPhoto"
        app:layout_constraintVertical_bias="0.816"
        tools:text="@string/githubUser_name" />

    <TextView
        android:id="@+id/userId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="32dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@id/itemName"
        app:layout_constraintLeft_toRightOf="@id/itemPhoto"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:textStyle="italic"
        tools:text="@string/githubUser_id" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/itemPhoto"
        app:layout_constraintTop_toBottomOf="@id/userId"
        tools:text="@string/follower" />

    <TextView
        android:id="@+id/desc_foll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@id/desc"
        app:layout_constraintLeft_toRightOf="@id/itemPhoto"
        android:textStyle="bold"
        android:textColor="@color/white"
        tools:text="@string/following" />

    <TextView
        android:id="@+id/desc_repo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/desc_foll"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@id/desc_foll"
        app:layout_constraintLeft_toRightOf="@id/itemPhoto"
        android:textStyle="bold"
        android:textColor="@color/white"
        tools:text="@string/repo" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@id/desc_repo"
        app:layout_constraintLeft_toRightOf="@id/itemPhoto"
        android:textStyle="bold"
        android:textColor="@color/white"
        tools:text="@string/location" />

    <TextView
        android:id="@+id/company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@id/location"
        app:layout_constraintLeft_toRightOf="@id/itemPhoto"
        android:textStyle="bold"
        android:textColor="@color/white"
        tools:text="@string/company" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        app:tabTextColor="@color/black"
        app:tabMode="fixed"
        app:tabRippleColor="@null"
        app:layout_constraintTop_toBottomOf="@id/itemPhoto"
        tools:ignore="MissingConstraints" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp2foll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="292dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabs" />
</androidx.constraintlayout.widget.ConstraintLayout>