<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#545454"
    tools:context=".SplashScreen">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/splashschreenid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/githubuserlogo"
        android:contentDescription="@string/githubuserlogo" />

    <TextView
        android:id="@+id/splashschreenid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="24sp"
        android:textColor="#FFF"/>

    <TextView
        android:id="@+id/appdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appdate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splashschreenid"
        android:textSize="18sp"
        android:textColor="#FFF"/>

    <TextView
        android:id="@+id/appcreator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appcreator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appdate"
        android:textSize="16sp"
        android:textStyle="italic"
        android:textColor="#FFF"/>

</androidx.constraintlayout.widget.ConstraintLayout>