<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimary"
        android:padding="8dp">
        <ImageView
            android:id="@+id/img_itemPhoto"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:layout_marginBottom="4dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/githubUser_photo"/>
        <TextView
            android:id="@+id/tv_itemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="0dp"
            android:layout_toEndOf="@id/img_itemPhoto"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            tools:text="@string/githubUser_name" />
        <TextView
            android:id="@+id/tv_userId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="16dp"
            android:layout_below="@id/tv_itemName"
            android:layout_toEndOf="@id/img_itemPhoto"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:textStyle="italic"
            tools:text="@string/githubUser_id" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_userId"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@id/img_itemPhoto"
            android:textStyle="bold"
            android:textColor="@color/white"
            tools:text="@string/follower" />

        <TextView
            android:id="@+id/tv_desc_foll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_desc"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@id/img_itemPhoto"
            android:textStyle="bold"
            android:textColor="@color/white"
            tools:text="@string/following" />

        <TextView
            android:id="@+id/tv_desc_repo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_desc_foll"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@id/img_itemPhoto"
            android:textStyle="bold"
            android:textColor="@color/white"
            tools:text="@string/repo" />

        <LinearLayout
            android:id="@+id/layout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/img_itemPhoto"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_share"
                android:backgroundTint="@color/colorPrimaryVariant"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="16dp"
                android:text="@string/share"
                android:textSize="12sp" />
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>